[package]
name = "teleemix"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros", "rustls"], default-features = false }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
log = "0.4"
pretty_env_logger = "0.5"
dotenvy = "0.15"
tokio-util = "0.7"
lazy_static = "1"
